--- a/references.bib
+++ b/references.bib
@@ -214,7 +214,6 @@
 	urldate = {2014-06-03},
 	journal = {Neuropsychopharmacology},
 	author = {Coull, Jennifer T. and Cheng, Ruey-Kuang and Meck, Warren H.},
-	month = jan,
 	year = {2011},
 	keywords = {Dopamine, Glutamate, hazard function, Parkinson's disease, putamen, temporal prediction},
 	pages = {3--25},
@@ -241,40 +240,6 @@
 }
 
 @article{coull_dissociating_2008,
-	title = {Dissociating explicit timing from temporal expectation with {fMRI}},
-	volume = {18},
-	issn = {0959-4388},
-	doi = {10.1016/j.conb.2008.07.011},
-	abstract = {Explicit timing is engaged whenever subjects make a deliberate estimate of discrete duration in order to compare it with a previously memorised standard. Conversely, implicit timing is engaged, even without a specific instruction to time, whenever sensorimotor information is temporally structured and can be used to predict the duration of future events. Both emergent timing (motor) and temporal expectation (perceptual) are forms of implicit timing. Recent {fMRI} studies demonstrate discrete neural substrates for explicit and implicit timing. Specifically, basal ganglia are activated almost invariably by explicit timing, with co-activation of prefrontal, premotor and cerebellar areas being more context-dependent. Conversely, implicit perceptual timing (or "temporal expectation") recruits cortical action circuits, comprising inferior parietal and premotor areas, highlighting its role in the optimisation of prospective behaviour.},
-	language = {eng},
-	number = {2},
-	journal = {Current Opinion in Neurobiology},
-	author = {Coull, Jt and Nobre, Ac},
-	month = apr,
-	year = {2008},
-	pmid = {18692573},
-	keywords = {Basal ganglia, Cerebellum, Functional Laterality, Humans, Magnetic Resonance Imaging, Memory, Motor cortex, Neural Pathways, Reaction Time, Time perception},
-	pages = {137--144}
-}
-
-@article{coull_dissociating_2008-1,
-	title = {Dissociating explicit timing from temporal expectation with {fMRI}},
-	volume = {18},
-	issn = {0959-4388},
-	doi = {10.1016/j.conb.2008.07.011},
-	abstract = {Explicit timing is engaged whenever subjects make a deliberate estimate of discrete duration in order to compare it with a previously memorised standard. Conversely, implicit timing is engaged, even without a specific instruction to time, whenever sensorimotor information is temporally structured and can be used to predict the duration of future events. Both emergent timing (motor) and temporal expectation (perceptual) are forms of implicit timing. Recent {fMRI} studies demonstrate discrete neural substrates for explicit and implicit timing. Specifically, basal ganglia are activated almost invariably by explicit timing, with co-activation of prefrontal, premotor and cerebellar areas being more context-dependent. Conversely, implicit perceptual timing (or "temporal expectation") recruits cortical action circuits, comprising inferior parietal and premotor areas, highlighting its role in the optimisation of prospective behaviour.},
-	language = {eng},
-	number = {2},
-	journal = {Current Opinion in Neurobiology},
-	author = {Coull, Jt and Nobre, Ac},
-	month = apr,
-	year = {2008},
-	pmid = {18692573},
-	keywords = {Basal ganglia, Cerebellum, Functional Laterality, Humans, Magnetic Resonance Imaging, Memory, Motor cortex, Neural Pathways, Reaction Time, Time perception},
-	pages = {137--144}
-}
-
-@article{coull_dissociating_2008-2,
 	series = {Cognitive neuroscience},
 	title = {Dissociating explicit timing from temporal expectation with {fMRI}},
 	volume = {18},
@@ -285,9 +250,10 @@
 	number = {2},
 	urldate = {2014-07-08},
 	journal = {Current Opinion in Neurobiology},
-	author = {Coull, JT and Nobre, AC},
+	author = {Coull, J.T. and Nobre, A.C.},
 	month = apr,
 	year = {2008},
+	keywords = {Basal ganglia, Cerebellum, Functional Laterality, Humans, Magnetic Resonance Imaging, Memory, Motor cortex, Neural Pathways, Reaction Time, Time perception},
 	pages = {137--144},
 	file = {ScienceDirect Full Text PDF:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/38S5GRAR/Coull and Nobre - 2008 - Dissociating explicit timing from temporal expecta.pdf:application/pdf;ScienceDirect Snapshot:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/UNC7DSUQ/S095943880800069X.html:text/html}
 }
@@ -495,6 +461,14 @@ Lateralized suppression of beta power prior to externally generated movements is
 	year = {1998}
 }
 
+@book{jeffreys_theory_1961,
+	address = {Oxford, {UK}},
+	title = {Theory of probability},
+	publisher = {Oxford University Press},
+	author = {Jeffreys, Harold},
+	year = {1961}
+}
+
 @article{jenkinson_new_2011,
 	title = {New insights into the relationship between dopamine, beta oscillations and motor function},
 	volume = {34},
@@ -510,6 +484,25 @@ Lateralized suppression of beta power prior to externally generated movements is
 	year = {2011},
 	pages = {611--618},
 	file = {ScienceDirect Full Text PDF:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/R6HSHJCP/Jenkinson and Brown - 2011 - New insights into the relationship between dopamin.pdf:application/pdf;ScienceDirect Snapshot:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/SZUC9GRU/S0166223611001597.html:text/html}
+}
+
+@article{jones_basal_2008,
+	title = {Basal ganglia, dopamine and temporal processing: Performance on three timing tasks on and off medication in Parkinson’s disease},
+	volume = {68},
+	issn = {0278-2626},
+	shorttitle = {Basal ganglia, dopamine and temporal processing},
+	url = {http://www.sciencedirect.com/science/article/pii/S0278262608001589},
+	doi = {10.1016/j.bandc.2008.02.121},
+	abstract = {A pervasive hypothesis in the timing literature is that temporal processing in the milliseconds and seconds range engages the basal ganglia and is modulated by dopamine. This hypothesis was investigated by testing 12 patients with Parkinson’s disease ({PD}), both ‘on’ and ‘off’ dopaminergic medication, and 20 healthy controls on three timing tasks. In a seconds range (30–120 s) time production task, patients tested ‘on’ medication showed a significantly different accuracy profile compared to controls and when tested ‘off’ medication. However, no group or on vs off medication differences in accuracy were found on a time reproduction task and a warned reaction time task requiring temporal processing within the 250–2000 ms range. Variability was measured using the coefficient of variation, with the performance of the patient group on the time reproduction task violating the scalar property, suggesting atypical temporal processing mechanisms. The data suggest that the integrity of the basal ganglia is necessary for ‘typical’ time production in the seconds range as well as for time reproduction at shorter intervals. Exploratory factor analysis suggested that the time production task uses neural mechanisms distinct from those used in the other two timing tasks. The dissociation of the effects of dopaminergic medication and nature of task on performance in {PD} raises interesting questions about the pharmacological mediation and task-specificity of deficits in temporal processing.},
+	number = {1},
+	urldate = {2014-07-14},
+	journal = {Brain and Cognition},
+	author = {Jones, Catherine R. G. and Malone, Tim J. L. and Dirnberger, Georg and Edwards, Mark and Jahanshahi, Marjan},
+	month = oct,
+	year = {2008},
+	keywords = {Basal ganglia, Dopamine, Movement disorder, Parkinson’s disease, Perceptual timing, Temporal processing},
+	pages = {30--41},
+	file = {ScienceDirect Full Text PDF:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/64P7HTCW/Jones et al. - 2008 - Basal ganglia, dopamine and temporal processing P.pdf:application/pdf;ScienceDirect Snapshot:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/C7UIIUXD/S0278262608001589.html:text/html}
 }
 
 @article{joundi_persistent_2013,
@@ -841,6 +834,23 @@ Both groups shared in common strong correlations relating {CNV} amplitude and {R
 	file = {Rozhkova_Maria.pdf:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/ZQ3GQDCU/Rozhkova_Maria.pdf:application/pdf}
 }
 
+@article{martin_interval_2008,
+	title = {Interval timers and coupled oscillators both mediate the effect of temporally structured cueing},
+	volume = {40},
+	issn = {1053-8119},
+	url = {http://www.sciencedirect.com/science/article/pii/S1053811908000839},
+	doi = {10.1016/j.neuroimage.2008.01.024},
+	abstract = {When observers are presented with targets in the context of temporal structure, performance is modulated by that structure. Interval timing mechanisms and coupled oscillators are two popular classes of model that attempt to explain how temporal structure modulates attention and motor performance to bring about the behavioral costs and benefits of temporal structure. In this experiment, participants made speeded choice reactions to targets following a series of visual warning stimuli. The warning stimuli afforded prediction of target onset time. Brain activity related to temporally focused attention and motor preparation was measured using magnetoencephalography. Parietal, cerebellar, and somatomotor activity was found to be associated with response latency and the performance benefit of the cued relative to uncued targets. Parietal activity was consistent with an interval timing mechanism, while somatomotor activity was more consistent with a coupled oscillator mechanism. Cerebellar activity had features consistent with both mechanisms. To our knowledge, this is the first evidence that both processes occur simultaneously.},
+	number = {4},
+	urldate = {2014-07-12},
+	journal = {{NeuroImage}},
+	author = {Martin, Tim and Houck, Jon M. and Kičić, Dubravko and Tesche, Claudia D.},
+	month = may,
+	year = {2008},
+	pages = {1798--1806},
+	file = {ScienceDirect Full Text PDF:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/GB3UJSSB/Martin et al. - 2008 - Interval timers and coupled oscillators both media.pdf:application/pdf;ScienceDirect Snapshot:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/DSJ7Z7NJ/S1053811908000839.html:text/html}
+}
+
 @article{molnar_spectral_2008,
 	title = {Spectral characteristics and linear–nonlinear synchronization changes of different {EEG} frequency bands during the {CNV}},
 	volume = {45},
@@ -901,6 +911,26 @@ Finally, four factors are proposed as exerting an influence on the relationship 
 	year = {1970},
 	pages = {399--419},
 	file = {ScienceDirect Full Text PDF:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/BZGK88GR/Näätänen - 1970 - The diminishing time-uncertainty with the lapse of.pdf:application/pdf;ScienceDirect Snapshot:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/7P4FJFNU/0001691870900351.html:text/html}
+}
+
+@article{praamstra_neurophysiology_2006,
+	title = {Neurophysiology of Implicit Timing in Serial Choice Reaction-Time Performance},
+	volume = {26},
+	issn = {0270-6474, 1529-2401},
+	url = {http://www.jneurosci.org/content/26/20/5448},
+	doi = {10.1523/JNEUROSCI.0440-06.2006},
+	abstract = {Neural representations of time for the judgment of temporal durations are reflected in electroencephalographic ({EEG}) slow brain potentials, as established in time production and perception tasks. Here, we investigated whether anticipatory processes in reaction-time procedures are governed by similar mechanisms of interval timing. We used a choice reaction task with two different, temporally regular stimulus presentation regimes, both with occasional deviant interstimulus intervals. Temporal preparation was shown in the form of adjustments in time course of slow brain potentials, such that they reached their maximum amplitude just before a new trial, independent of the duration of the interstimulus interval. Preparation was focused on a brief time window, demonstrated by a drop in amplitude of slow potentials as the standard interval had elapsed in deviant interstimulus intervals. Implicit timing influencing perceptual processing was shown in reduced visual-evoked responses to delayed stimuli after a deviant interstimulus interval and in a reduction of {EEG} α power over the visual cortex at the time when the standard interval had elapsed. In contrast to explicit timing tasks, the slow brain potential manifestations of implicit timing originated in the lateral instead of the medial premotor cortex. Together, the results show that temporal regularities set up a narrow time window of motor and sensory attention, demonstrating the operation of interval timing in reaction time performance. The divergence in slow brain potential distribution between implicit and explicit timing tasks suggests that interval timing for different behaviors relies on qualitatively similar mechanisms implemented in distinct cortical substrates.},
+	language = {en},
+	number = {20},
+	urldate = {2014-07-12},
+	journal = {The Journal of Neuroscience},
+	author = {Praamstra, Peter and Kourtis, Dimitrios and Kwok, Hoi Fei and Oostenveld, Robert},
+	month = may,
+	year = {2006},
+	pmid = {16707797},
+	keywords = {contingent negative variation, {ELECTROENCEPHALOGRAPHY}, motor preparation, premotor cortex, Reaction Time, Timing},
+	pages = {5448--5455},
+	file = {Full Text PDF:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/QP3NAQ6H/Praamstra et al. - 2006 - Neurophysiology of Implicit Timing in Serial Choic.pdf:application/pdf;Snapshot:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/8NUTJUAE/5448.html:text/html}
 }
 
 @article{praamstra_slow_????,
@@ -995,6 +1025,27 @@ Finally, four factors are proposed as exerting an influence on the relationship 
 	keywords = {Auditory Discrimination, auditory {ERP} components, Auditory Evoked Potentials, female rats, Humans, oddball task, Rats, Species Differences, standard stimuli, Task Complexity, task effects},
 	pages = {60--68},
 	file = {EBSCO Full Text:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/6DMB93PX/Sambeth et al. - 2003 - Auditory event-related potentials in humans and ra.pdf:application/pdf}
+}
+
+@article{senkowski_oscillatory_2006,
+	title = {Oscillatory Beta Activity Predicts Response Speed during a Multisensory Audiovisual Reaction Time Task: A High-Density Electrical Mapping Study},
+	volume = {16},
+	issn = {1047-3211, 1460-2199},
+	shorttitle = {Oscillatory Beta Activity Predicts Response Speed during a Multisensory Audiovisual Reaction Time Task},
+	url = {http://cercor.oxfordjournals.org/content/16/11/1556},
+	doi = {10.1093/cercor/bhj091},
+	abstract = {Bisensory redundant targets are processed faster than the respective unisensory target stimuli alone as evidenced by substantially faster reaction times ({RTs}). This multisensory {RT} facilitation has been interpreted as an expression of integrative processing between the different sensory modalities. However, the neuronal mechanisms underlying the {RT} facilitation effect are not well understood. Oscillatory responses in the beta frequency range (13–30 Hz) have been related to sensory-motor processing. Here, we investigated whether modulation of beta responses might also underlie the faster {RTs} seen for multisensory stimuli. Using high-density electrical mapping, we explored the association between early (50–170 ms) multisensory processing in the evoked beta response and {RTs} recorded during a simple {RT} task. Subjects were instructed to indicate the appearance of any stimulus in a stream of auditory-alone (A), visual-alone (V), and multisensory ({AV}) stimuli by a button press. Beta responses were analyzed using Morlet wavelet transformations. Multisensory interactions were found over frontal, occipital, central, and sensory-motor regions. Critically, beta activity correlated with mean {RTs} over all stimulus types. Significant negative correlations were found for frontal, occipital, and sensory-motor scalp regions. We conclude that the association between oscillatory beta activity and integrative multisensory processing is directly linked to multisensory {RT} facilitation effects.},
+	language = {en},
+	number = {11},
+	urldate = {2014-07-13},
+	journal = {Cerebral Cortex},
+	author = {Senkowski, Daniel and Molholm, Sophie and Gomez-Ramirez, Manuel and Foxe, John J.},
+	month = nov,
+	year = {2006},
+	pmid = {16357336},
+	keywords = {cross-modal, {EEG}, {ERP}, motor system, sensory integration},
+	pages = {1556--1565},
+	file = {Full Text PDF:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/VC8CI2KH/Senkowski et al. - 2006 - Oscillatory Beta Activity Predicts Response Speed .pdf:application/pdf;Snapshot:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/ISC6X585/1556.html:text/html}
 }
 
 @article{steinborn_sequential_2008,
@@ -1149,6 +1200,15 @@ Finally, four factors are proposed as exerting an influence on the relationship 
 	file = {EBSCO Full Text:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/8ANJ5DQW/Wallace and Rabin - 1960 - Temporal experience.pdf:application/pdf}
 }
 
+@article{walter_contingent_1964,
+	title = {Contingent negative variation: An electric sign of sensorimotor association and expectancy in the human brain},
+	volume = {203},
+	journal = {Nature},
+	author = {Walter, W. G. and Cooper, R. and Aldridge, V. J. and McCallum, W. C. and Winter, A.L.},
+	year = {1964},
+	pages = {380--384}
+}
+
 @article{webb_regulation_2014,
 	series = {Circadian Rhythms in Behavioral Neuroscience},
 	title = {Regulation of circadian rhythms in mammals by behavioral arousal},
@@ -1200,6 +1260,22 @@ Finally, four factors are proposed as exerting an influence on the relationship 
 	pmid = {22933807},
 	pages = {12258--12267},
 	file = {Full Text PDF:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/NVI2N49X/Wiener et al. - 2012 - Parietal Influence on Temporal Encoding Indexed by.pdf:application/pdf;Snapshot:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/3AVAT9QH/12258.html:text/html}
+}
+
+@article{zaepffel_modulations_2013,
+	title = {Modulations of {EEG} Beta Power during Planning and Execution of Grasping Movements},
+	volume = {8},
+	url = {http://dx.doi.org/10.1371/journal.pone.0060060},
+	doi = {10.1371/journal.pone.0060060},
+	abstract = {Although beta oscillations (≈ 13–35 Hz) are often considered as a sensorimotor rhythm, their functional role remains debated. In particular, the modulations of beta power during preparation and execution of complex movements in different contexts were barely investigated. Here, we analysed the beta oscillations recorded with electroencephalography ({EEG}) in a precued grasping task in which we manipulated two critical parameters: the grip type (precision vs. side grip) and the force (high vs. low force) required to pull an object along a horizontal axis. A cue was presented 3 s before a {GO} signal and provided full, partial or no information about the two movement parameters. We measured beta power over the centro-parietal areas during movement preparation and execution as well as during object hold. We explored the modulations of power in relation to the amount and type of prior information provided by the cue. We also investigated how beta power was affected by the grip and force parameters.We observed an increase in beta power around the cue onset followed by a decrease during movement preparation and execution. These modulations were followed by a transient power increase during object hold. This pattern of modulations did not differ between the 4 movement types (2 grips ×2 forces). However, the amount and type of prior information provided by the cue had a significant effect on the beta power during the preparatory delay. We discuss how these results fit with current hypotheses on the functional role of beta oscillations.},
+	number = {3},
+	urldate = {2014-07-14},
+	journal = {{PLoS} {ONE}},
+	author = {Zaepffel, Manuel and Trachel, Romain and Kilavik, Bjørg Elisabeth and Brochier, Thomas},
+	month = mar,
+	year = {2013},
+	pages = {e60060},
+	file = {PLoS Full Text PDF:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/K2E29HZ6/Zaepffel et al. - 2013 - Modulations of EEG Beta Power during Planning and .pdf:application/pdf;PLoS Snapshot:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/I8CHW4RB/infodoi10.1371journal.pone.html:text/html}
 }
 
 @article{_bayes_????,
