--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,8 @@
 \usepackage{cleveref} % \cref instead of \ref, automatic "Section" etc.
 \usepackage{eurosym}
 
+\graphicspath{ {./figures/} }
+
 \title{Predicting reaction time using oscillations in the beta band}
 \shorttitle{Predicting reaction time with beta activity}
 \author{Max Hollmann}
@@ -162,39 +164,77 @@ to occur later than it does, and thus not be prepared for it when it
 actually occurs, leading to a slower reaction time.
 
 \section{Method}
+
 \section{Results}
+The hypotheses were that participants react slower if the stimulus is presented earlier and faster if the stimulus is presented later compared to the standard interval after which the stimulus is presented (1), and that participants with a higher beta power in the first second of the interval produce slower reaction times and vice versa (2).
+
+\subsection{BCI}
+Due to the calculation of the beta power being implemented incorrectly, the BCI component of the
+setup did not provide the intended benefit of an ideal distribution of beta power across length conditions. Beta power was recalculated from the EEG signal for the subsequent analysis.
+
+\subsection{Assumptions}
+Due to the repeated measures nature of the research design, observations were not independent. To control for between-subject as well as time series effects in the reaction times, the effects of subject and trial number as well as their interaction were partialed out. More specifically, we used the residuals of a linear regression with subject and trial number as predictors for reaction time.
+
+Normality of the data could not be assumed since reaction times were found to be right skewed ($skewness = 1.57$, $kurtosis = 18.05$). Moreover linearity assumptions did not hold for either independent variable. However, homoscedasticity could be assumed. Even though some assumptions were violated, the linear regression model was used.
+
+\subsection{Linear Regression}
+To test the hypotheses a linear regression was performed predicting reaction time from length condition, beta power, and their interaction (\Cref{tbl:regression}). Descriptive statistics of the data are provided in \Cref{tbl:descriptives}.
+
+In comparison to the reaction times in the medium length condition ($M = 0.188$, $SD = 0.061$), reaction times in the long condition were on average 17.1 ms faster ($t(9480) = -10.438$, $p < .001$) while reaction times in the short condition were on average 25.9 ms slower ($t(9480) = 16.93$, $p < .001$), these results are in line with first hypothesis (\Cref{fig:rt_by_length}).
+
+However, neither beta as main effect, $t(9480) = -0.493$, $p = 0.622$, nor the interaction between beta and length condition were found to have a significant effect on reaction time, $t(9480) = 0.658$, $p = 0.51$ for beta on short compared to medium condition, $t(9480) = -0.641$, $p = 0.52$ for beta on long compared to medium condition. Thus no evidence was found to support our second hypothesis (\Cref{fig:rt_by_beta}).
+
+\begin{figure}[!ht]
+  \includegraphics[width=0.7\textwidth]{actual_rt_by_length}
+  \caption{Mean reaction time by length condition.}
+  \label{fig:rt_by_length}
+\end{figure}
+
+\begin{figure}[!ht]
+  \includegraphics[width=0.7\textwidth]{actual_rt_by_beta}
+  \caption{Mean reaction time by beta power (cut-offs at $\frac{1}{3}$ and $\frac{2}{3}$ quantiles).}
+  \label{fig:rt_by_beta}
+\end{figure}
+
+\subsection{Bayes Factor Analysis}
+As we cannot reject the utility of beta power as a predictor for reaction time using the conventional linear regression model, we employed Bayesian statistics to grade the decisiveness of the evidence \cite{jeffreys_theory_1961}. The \emph{lmBF} function from the R package \emph{BayesFactor} (version 0.9.7) was used to compare the full model including both length condition and beta power to a model including only length condition. The model omitting beta power was favored with a Bayes factor of 28.99 ($\pm 1.33\%$). According to \citeA{jeffreys_theory_1961} this Bayes factor can be interpreted as strong evidence against the model including beta power as a predictor.
+
 
 \begin{table}[ht]
-  \caption{Regression of reaction time on length condition and beta power}
-  \centering
-  \begin{tabular}{lrrrr}
-    \toprule
-                                                  & B        & SE         & t       & p         \\
-    \midrule
-    Intercept                                     & -0.0029  & 0.0008     &  -3.42  & $< 0.001$ \\
-    Length condition: long                        & -0.0171  & 0.0016     & -10.44  & $< 0.001$ \\
-    Length condition: short                       &  0.0259  & 0.0015     &  16.96  & $< 0.001$ \\
-    Beta power                                    & -0.0031  & 0.0063     &  -0.49  & $0.622$   \\
-    Beta power $\times$ Length condition: long    & -0.0079  & 0.0123     &  -0.64  & $0.521$   \\
-    Beta power $\times$ Length condition: short   & -0.0086  & 0.0130     &   0.66  & $0.511$   \\
-    \bottomrule
-  \end{tabular}
+  \caption{Regression coefficients for the linear model predicting reaction time.}
+  \begin{flushleft}
+    \begin{tabular}{lrrrr}
+      \toprule
+                                                    & B        & SE         & t       & p         \\
+      \midrule
+      Intercept                                     & -0.0029  & 0.0008     &  -3.42  & $< 0.001$ \\
+      Length condition: long                        & -0.0171  & 0.0016     & -10.44  & $< 0.001$ \\
+      Length condition: short                       &  0.0259  & 0.0015     &  16.96  & $< 0.001$ \\
+      Beta power                                    & -0.0031  & 0.0063     &  -0.49  & $0.622$   \\
+      Beta power $\times$ Length condition: long    & -0.0079  & 0.0123     &  -0.64  & $0.521$   \\
+      Beta power $\times$ Length condition: short   & -0.0086  & 0.0130     &   0.66  & $0.511$   \\
+      \bottomrule
+    \end{tabular}
+  \end{flushleft}
+  \label{tbl:regression}
 \end{table}
 
 \begin{table}[ht]
-  \caption{Descriptive statistics overall as well as by length condition}
-  \centering
-  \begin{tabular}{lrrrrr}
-    \toprule
-                             & \multicolumn{2}{l}{Reaction time}              && \multicolumn{2}{l}{Beta}                       \\ \cmidrule{2-3} \cmidrule{5-6}
-                             & \multicolumn{1}{l}{M} & \multicolumn{1}{l}{SD} && \multicolumn{1}{l}{M} & \multicolumn{1}{l}{SD} \\
-    \midrule
-    Overall                  & 0.188                 &  0.067                 && 0.277                 & 0.188                  \\
-    Length condition: short  & 0.207                 &  0.070                 && 0.270                 & 0.168                  \\
-    Length condition: medium & 0.188                 &  0.061                 && 0.283                 & 0.200                  \\
-    Length condition: long   & 0.166                 &  0.070                 && 0.271                 & 0.177                  \\
-    \bottomrule
-  \end{tabular}
+  \caption{Means and standard deviations of reaction time and beta power overall and by length conditions. Note that neither beta power nor reaction time are corrected for subject and trial effects.}
+  \begin{flushleft}
+    \begin{tabular}{lrrrrr}
+      \toprule
+                               & \multicolumn{2}{l}{Reaction time}              && \multicolumn{2}{l}{Beta}                       \\ \cmidrule{2-3} \cmidrule{5-6}
+                               & \multicolumn{1}{l}{M} & \multicolumn{1}{l}{SD} && \multicolumn{1}{l}{M} & \multicolumn{1}{l}{SD} \\
+      \midrule
+      Overall                  & 0.188                 &  0.067                 && 0.277                 & 0.188                  \\
+      Length condition: short  & 0.207                 &  0.070                 && 0.270                 & 0.168                  \\
+      Length condition: medium & 0.188                 &  0.061                 && 0.283                 & 0.200                  \\
+      Length condition: long   & 0.166                 &  0.070                 && 0.271                 & 0.177                  \\
+      \bottomrule
+    \end{tabular}
+  \end{flushleft}
+  \label{tbl:descriptives}
 \end{table}
 
 \section{Discussion}
@@ -290,15 +330,14 @@ implicit and explicit timing employ different neural structures.
 
 Another possible reason for beta power not being useful to predict
 reaction time is that our task differed from those of
-\citeA{kononowicz_beta_2014}, \citeA{bartolo_information_2014}, and
-\citeA{joundi_persistent_2013} in that it did not allow participants
-to fully plan when to make the second key press directly after the
-first one, as they had to wait for the stimulus to respond. In other
-words, while previous tasks required responses based purely on
-internal cues (interval timing), the present task required
-participants to wait for an external cue to respond. Thus, our finding
-might suggest that internally and externally cued tasks employ
-different timing mechanisms.
+\citeA{kononowicz_beta_2014} and \citeA{bartolo_information_2014} in
+that it did not allow participants to fully plan when to make the
+second key press directly after the first one, as they had to wait for
+the stimulus to respond. In other words, while previous tasks required
+responses based purely on internal cues (interval timing), the present
+task required participants to wait for an external cue to
+respond. Thus, our finding might suggest that internally and
+externally cued tasks employ different timing mechanisms.
 
 \subsection{Limitations}
 The null findings might also be due to limitations of the study. The
@@ -307,8 +346,8 @@ shielded, resulting in a lot of noise in the EEG signal. Furthermore,
 we did not use the FCz electrode as \citeA{kononowicz_beta_2014} did,
 but electrodes surrounding it. However, post-hoc analyses revealed a
 significant relationship between subjects' mean beta power and mean
-reaction time, indicating that beta activity was measured in a meaningful
-way.
+reaction time, indicating that beta activity was measured in a
+meaningful way.
 
 Moreover, our data did not satisfy all assumptions of the linear
 regression model; normality, independence, and linearity were
@@ -329,7 +368,13 @@ kind of BCI used in the present study can safely be used in future
 research of a similar nature.
 
 \subsection{Conclusion}
-
+We found evidence for an effect of interval length on reaction time,
+in line with previous research \cite{naatanen_diminishing_1970,
+  karlin_reaction_1959, drazin_effects_1961,
+  grosjean_timing_2001}. Beta power, however, was found not to be
+suitable as a predictor, which confirms brain imaging studies that
+found that explicit and implicit timing activates different brain
+regions \cite{coull_dissociating_2008}.
 
 %%%%% Hedderik to Simon
 
